# baleself

./: .gitignore  LICENSE  SECURITY.md  browser_manager.py  last_data_sid.txt  main.py  pyproject.toml  readme.md
baleself/: __init__.py  browser_manager.py  gennumber.py  last_data_sid.txt  lib.py  req.py  text.py  utils.py
examples/: room_bot.py  voice_bot.py
src/baleself/: lib.py  models.py  tests.py  utils.py
