[project]
name = "baleself"
version = "0.2.0"
authors = [
    { name = "Amirabolfazl Alipour", email = "amyrabwalfdll1389@gmail.com" },
    { name = "Hossein Ranganis", email = "wabbit.space@gmail.com" },
]
description = "A python library for create selfbots in bale!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["aiohttp"]
[project.urls]
github = "https://github.com/Zellias/baleself"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["baleself"]